--- a/land-area-converter/index.html
+++ b/land-area-converter/index.html
@@ -84,9 +84,13 @@
     </script>
 </head>
 <body>
-    <nav class="navbar">
-        <a href="/" class="nav-link">Home</a>
-    </nav>
+    
+<nav class="navbar">
+    <a href="/" class="nav-link">Home</a>
+    <a href="/land-area-converter/addsubtractlandarea.html" class="nav-link" style="float: right;" aria-label="Skip to Add or Subtract Land Area">
+        <span style="margin-right: 5px; transform: rotate(180deg); display: inline-block;">←</span> जग्गाको क्षेत्रफल जोड्ने वा घटाउने </a>
+</nav>
+
     <div class="container">
         <h1>Land Area Converter - Convert Ropani, Aana, Dhur</h1>
 
@@ -160,9 +164,6 @@
             <li>1 Bigaha = 6,772.63 Sq. Meters</li>
         </ul>
         <button onclick="location.href='/land-area-converter/faq.html'" class="faq-button">FAQ</button>
-<button onclick="location.href='/land-area-converter/addsubtractlandarea.html'" class="faq-button">जग्गाको क्षेत्रफल जोड्ने वा घटाउने
-
-</button>
     </div>
 
     <script>
