--- a/land-area-converter/addsubtractlandarea.html
+++ b/land-area-converter/addsubtractlandarea.html
@@ -248,7 +248,7 @@
             <div id="mixed-result" class="result hidden" aria-live="polite"></div>
             <div id="mixed-error" class="error hidden" aria-live="assertive"></div>
         </section>
-
+        <button onclick="location.href='/land-area-converter/faq.html'" class="faq-button">FAQ</button>
     </main>
 
 <script>
