--- a/land-area-converter/addsubtractlandarea.html
+++ b/land-area-converter/addsubtractlandarea.html
@@ -120,6 +120,17 @@
             margin: 10px;
             font-size: 14px;
         }
+
+.faq-button {
+    background: #27ae60;
+    margin: 20px 0;
+    display: inline-block;
+}
+
+.faq-button:hover {
+    background: #219653;
+}
+
         @media (max-width: 600px) {
             .input-group {
                 flex-direction: column;
