--- a/land-area-converter/faq.html
+++ b/land-area-converter/faq.html
@@ -387,6 +387,8 @@
         </section>
 
         <a href="/land-area-converter/" class="back-button" aria-label="Return to Land Area Converter">Back to Converter</a>
+
+<a href="/land-area-converter/addsubtractlandarea.html" class="back-button" aria-label="Return to jagga ko area jod ghatau">Back to Add or Subtract Land Area</a>
     </main>
 </body>
 </html>
