--- a/land-area-converter/faq.html
+++ b/land-area-converter/faq.html
@@ -35,12 +35,24 @@
             padding: 20px;
             margin-bottom: 20px;
         }
+
         h1 {
-            text-align: center;
-            font-size: 2rem;
-            color: #333;
-            margin-bottom: 10px;
-        }
+    font-size: 2.5rem;
+    font-weight: 700;
+    color: #1e40af;
+    background: linear-gradient(to right, #3b82f6, #1e40af);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    text-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    margin-bottom: 20px;
+    padding: 10px 0;
+    animation: fadeInScale 1s ease-in-out;
+}
+@keyframes fadeInScale {
+    0% { opacity: 0; transform: scale(0.95); }
+    100% { opacity: 1; transform: scale(1); }
+}
+
         h2 {
             font-size: 1.5rem;
             color: #444;
