--- a/land-area-converter/faq.html
+++ b/land-area-converter/faq.html
@@ -14,7 +14,7 @@
     <meta property="og:image" content="https://krishnaniraula.com.np/images/land-calculator.jpg">
     <link rel="canonical" href="https://krishnaniraula.com.np/land-area-converter/faq.html">
     <title>FAQ - Nepali Land Area Converter</title>
-    <link href="dist/output.css" rel="stylesheet">
+    <link rel="stylesheet">
     <style>
         body {
             background: linear-gradient(to right, #e0eafc, #cfdef3);
