--- a/land-area-converter/faq.html
+++ b/land-area-converter/faq.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <meta name="description" content="Frequently Asked Questions (FAQ) about the Nepali Land Area Converter, including detailed unit conversions for Ropani, Aana, Paisa, Daam, Bigha, Kaththa, Dhur, and usage details for accurate land measurement calculations in Nepal.">
+    <meta name="description" content="FAQ for Nepali Land Area Converter: Convert,Add or Subtract Ropani, Aana, Paisa, Daam, Bigha, Kaththa, Dhur with accurate land measurement tips.">
     <meta name="keywords" content="Nepali land area converter, Ropani to Bigha, Aana to Kaththa, land measurement Nepal, Bigha to Ropani, Nepali land conversion, land area calculator FAQ">
     <meta name="author" content="Krishna Niraula">
     <meta name="robots" content="index, follow">
