--- a/land-area-converter/faq.html
+++ b/land-area-converter/faq.html
@@ -126,7 +126,7 @@
                 "name": "What units are used in the Nepali Land Area Calculator?",
                 "acceptedAnswer": {
                     "@type": "Answer",
-                    "text": "The calculator supports two systems: Ropani (with Aana, Paisa, Daam) and Bigha (with Kaththa, Dhur). It allows addition or subtraction within each system or mixed calculations between the two."
+                    "text": "The calculator supports two traditional systems: Ropani (with Aana, Paisa, Daam) and Bigha (with Kaththa, Dhur) and all modern units like square feet, square meter, hector, acre, square yard, etc.. It allows addition or subtraction within each traditional system or mixed calculations between the two."
                 }
             },
             {
@@ -302,7 +302,7 @@
             <h2 id="general-faq">General Questions</h2>
             <div class="faq-item">
                 <h3>What units are used in the Nepali Land Area Calculator?</h3>
-                <p>The calculator supports two systems: Ropani (with Aana, Paisa, Daam) and Bigha (with Kaththa, Dhur). It allows addition or subtraction within each system or mixed calculations between the two.</p>
+                <p>The calculator supports two systems: Ropani (with Aana, Paisa, Daam) and Bigha (with Kaththa, Dhur)and all modern units like square feet, square meter, hector, acre, square yard, etc.. It allows addition or subtraction within each traditional system or mixed calculations between the two.</p>
             </div>
             <div class="faq-item">
                 <h3>How accurate is the Land Area Converter?</h3>
