--- a/land-area-converter/plotter.html
+++ b/land-area-converter/plotter.html
@@ -971,7 +971,7 @@ getScaledPosition(x, y) {
                     infoText = '✅ <strong>Plot Optimized!</strong> Ready to Slice or Calculate Area.'; 
                     break; 
                 case 'SLICING': 
-                    infoText = '🔪 <strong>Slicing Mode:</strong> Follow instructions in the panel.'; 
+                    infoText = '🔪 <strong>Slicing Mode:</strong> Follow instructions in the panel. Mark expected area less than required '; 
                     break; 
                 case 'SLICED': 
                     infoText = '✨ <strong>Partition Complete!</strong> New parcel dimensions are shown.'; 
