--- a/land-area-converter/plotter.html
+++ b/land-area-converter/plotter.html
@@ -153,5 +153,6 @@
       })
       .catch(error => console.error("Error loading script:", error));
   </script>
+    <script src="scriptt.js"></script>
 </body>
 </html>
