--- a/land-area-converter/plotter.html
+++ b/land-area-converter/plotter.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Land Plotter Pro - Final Fixed Version</title>
+    <title>Land Plotter Pro</title>
     <style>
         :root {
             --primary-color: #005a9c;
