--- a/index.html
+++ b/index.html
@@ -91,6 +91,9 @@
 
 <li><a href="https://krishnaniraula.com.np/land-area-converter/addsubtractlandarea.html">Add or Subtract Land Area</a></li>
 
+
+<li><a href="https://krishnaniraula.com.np/land-area-converter/plotter.html">Plotter Pro</a></li>
+
                                     <li><a href="https://krishnaniraula.com.np/land-area-converter/faq.html">FAQ</a></li>
                                 </ul>
                             </li>
