css optimization and nav bar implement

--- a/land-area-converter/plotter.html
+++ b/land-area-converter/plotter.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,9 +12,10 @@
 
     <meta property="og:title" content="Land Plotter & Area Calculator | Nepal Land Measurement Units">
     <meta property="og:description" content="Draw, measure, and calculate land area with precision. Supports Nepali units (Ropani, Bigha) and features plot slicing and optimization.">
-<meta property="og:image" content="https://krishnaniraula.com.np/assets/images/ploter.jpg">
     <meta property="og:url" content="https://krishnaniraula.com.np/land-area-converter/plotter.html">
     <meta property="og:type" content="website">
+    <meta property="og:image" content="https://krishnaniraula.com.np/assets/images/plotter.jpg">
+
     <link rel="stylesheet" href="style.css">
 
     <script type="application/ld+json">
@@ -41,6 +44,13 @@
     </script>
 </head>
 <body>
+    <nav class="navbar">
+        <a href="/" class="nav-link">Home</a>
+        <a href="/land-area-converter/" class="nav-link" aria-label="Return to Land Area Converter">
+            <span>&#8592;</span> Back to Converter
+        </a>
+    </nav>
+
     <main class="main-container">
         <header>
             <h1>Land Plotter Pro</h1>
