--- a/land-area-converter/plotter.html
+++ b/land-area-converter/plotter.html
@@ -109,6 +109,8 @@
                         <label for="pdf-scale-selector">Scale</label>
                         <select id="pdf-scale-selector">
                             <option value="0">Fit to Page</option>
+                            <option value="100">1:100</option>
+                            <option value="150">1:150</option>
                             <option value="300">1:300</option>
                             <option value="600">1:600</option>
                             <option value="1200">1:1200</option>
