--- a/land-area-converter/plotter.html
+++ b/land-area-converter/plotter.html
@@ -7,7 +7,7 @@
     <meta name="description" content="An advanced online tool to accurately draw, measure, and calculate land area. Supports Nepali units like Ropani-Aana-Paisa-Dam and Bigha-Kaththa-Dhur. Perfect for land plotting, slicing, and optimization.">
     <meta name="keywords" content="land plotter, area calculator, land measurement nepal, ropani, aana, paisa, dam, bigha, kaththa, dhur, plot slicing, land survey tool, online land calculator">
     <link rel="canonical" href="https://krishnaniraula.com.np/land-area-converter/plotter.html">
-    <link rel="stylesheet" href="style.css"
+    <link rel="stylesheet" href="style.css">
     <meta property="og:title" content="Land Plotter & Area Calculator | Nepal Land Measurement Units">
     <meta property="og:description" content="Draw, measure, and calculate land area with precision. Supports Nepali units (Ropani, Bigha) and features plot slicing and optimization.">
     <meta property="og:url" content="https://krishnaniraula.com.np/land-area-converter/plotter.html">
