--- a/index.html
+++ b/index.html
@@ -226,6 +226,13 @@ TikTok is a trademark of ByteDance Ltd. This app is not affiliated with, endorse
     </div>
   </div>
 
+<div class="skill">
+    <label>Construction Site Accounting</label>
+    <div class="progress-bar">
+      <div class="progress-fill fill-70"></div>
+    </div>
+  </div>
+
   <div class="skill">
     <label>Documentation</label>
     <div class="progress-bar">
