--- a/steel-bars-calculator/index.html
+++ b/steel-bars-calculator/index.html
@@ -37,7 +37,7 @@
     <link rel="shortcut icon" type="image/png" href="https://krishnaniraula.com.np/assets/logo/favicon.png">
     
  
-   <link rel="stylesheet" href="/steel-bars-calculator/style.css">
+   <link rel="stylesheet" href="/style.css">
  
     
 
