Add Google Ads script to addsubtractlandarea.html

--- a/land-area-converter/addsubtractlandarea.html
+++ b/land-area-converter/addsubtractlandarea.html
@@ -154,6 +154,9 @@
         "operatingSystem": "Web"
     }
     </script>
+
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7909865065068819"
+     crossorigin="anonymous"></script>
 </head>
 <body>
 <nav class="navbar">
