Add Google Ads script to costefficiency.html

--- a/asphalt-calculator/costefficiency.html
+++ b/asphalt-calculator/costefficiency.html
@@ -28,7 +28,8 @@
     <meta name="twitter:image" content="https://krishnaniraula.com.np/assets/images/bestcost.jpg">
 
     <link rel="stylesheet" href="styl.css">
-    
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7909865065068819"
+     crossorigin="anonymous"></script>
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
