--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                                     <li><a href="https://krishnaniraula.com.np/converter/unit-converter/">Unit Converter</a></li>
                                 </ul>
                             </li>
-                            <li><a href="https://krishnaniraula.com.np/concrete-calculator/">Concrete Calculator</a></li>
+                       <li><a href="https://krishnaniraula.com.np/concrete-calculator/">Concrete Calculator</a></li> 
                             <li>
                                 <span class="parent-node">Land Area Converter</span>
                                 <ul>
@@ -199,12 +199,12 @@ TikTok is a trademark of ByteDance Ltd. This app is not affiliated with, endorse
         </div>
         <div class="container">
             <div class="box-container">
-                <a href="converter/unit-converter/" class="box">Unit Converter</a>
+              <!--  <a href="converter/unit-converter/" class="box">Unit Converter</a>   -->
                 <a href="asphalt-calculator/" class="box">Asphalt Calculator</a>
 		<a href="concrete-calculator/" class="box">Concrete Calculator</a>
                 <a href="land-area-converter/" class="box">Land Area Converter</a>
 		<a href="#" class="box" id="steel-gi-calculator">Steel and GI Calculator</a>
-                <a href="time-series-chart-animation/" class="box">Animated Time-Series Chart</a>
+               <!-- <a href="time-series-chart-animation/" class="box">Animated Time-Series Chart</a>  -->
             </div>
         </div>
     </div>
